# cassowary-haskell

./: .gitignore  .travis.yml  Functions.md  Notes.md  README.md  TODO.md  cabal.sandbox.config  cassowary-haskell.cabal  cassowary-haskell.cabal.old  circle.yml  package.yaml  profile.html  pubkey.thing  stack.yaml
bench/: Profile.hs
bench/Linear/Constraints/: Data.hs
bench/Linear/Constraints/Tableau/: Data.hs
bench/Linear/Grammar/Types/: Data.hs
cassowary-haskell/: LICENSE  README.md  cassowary-haskell.cabal
cassowary-haskell/src/Constraints/: Cassowary.hs
cassowary-haskell/src/Constraints/Cassowary/: Types.hs
cassowary-haskell/src/Linear/: Grammar.hs
cassowary-haskell/src/Linear/Constraints/: Cassowary.hs  Class.hs  Error.hs  Slack.hs  Tableau.hs
cassowary-haskell/src/Linear/Constraints/Cassowary/: AugmentedSimplex.hs
cassowary-haskell/src/Linear/Grammar/: Class.hs  Types.hs
cassowary-haskell/test/: Main.hs  ServerSpec.hs
cassowary-haskell/test/Linear/: GrammarSpec.hs
cassowary-haskell/test/Linear/Constraints/: CassowarySpec.hs  SlackSpec.hs
proposal/: main.aux  main.tex  prsrls.tex
semantics/: bland.tex  main.tex  matroids.tex  report-2015-09-23.tex
src/Linear/: Class.hs  Grammar.hs
src/Linear/Cassowary/: ClAbstractVariable.hs  ClDummyVariable.hs  ClSimplexSolver.hs  ClSlackVariable.hs  ClVariable.hs
src/Linear/Constraints/: Error.hs  Slack.hs  Tableau.hs  Weights.hs
src/Linear/Constraints/Cassowary/: AugmentedSimplex.hs  Basic.hs  Bland.hs  Refactor.hs
src/Linear/Grammar/: Types.hs
src/Linear/Grammar/Types/: Class.hs  Expressions.hs  Inequalities.hs  Syntax.hs  Utilities.hs  Variables.hs
src/Sets/: Class.hs
test/: Main.hs
test/Linear/: GrammarSpec.hs
test/Linear/Constraints/: CassowarySpec.hs  SlackSpec.hs  WeightSpec.hs
