Name:                   cassowary-haskell
Version:                0.0.0
Author:                 Athan Clark <athan.clark@gmail.com>
Maintainer:             Athan Clark <athan.clark@gmail.com>
License:                MIT
License-File:           LICENSE
Synopsis:               A modern Cassowary implementation in pure Haskell.
-- Description:
Cabal-Version:          >= 1.10
Build-Type:             Simple

Library
  Default-Language:     Haskell2010
  HS-Source-Dirs:       src
  GHC-Options:          -Wall -threaded -O2
  Exposed-Modules:      Linear.Class
                        Linear.Grammar
                        Linear.Grammar.Types
                        Linear.Constraints.Slack
                        Linear.Constraints.Error
                        Linear.Constraints.Tableau
                        Linear.Constraints.Cassowary
                        Linear.Constraints.Cassowary.AugmentedSimplex
  Build-Depends:        base >= 4.6 && < 5
                      , mtl
                      , transformers
                      , transformers-base
                      , containers
                      , witherable
                      , these
                      , keys
                      , sets
                      , composition
                      , deepseq
                      , QuickCheck
                      , quickcheck-instances

Test-Suite spec
  Type:                 exitcode-stdio-1.0
  Default-Language:     Haskell2010
  Hs-Source-Dirs:       src
                      , test
  Ghc-Options:          -Wall -threaded -O2
  Main-Is:              Main.hs
  Build-Depends:        base
                      , tasty
                      , tasty-quickcheck
                      , tasty-hunit
                      , QuickCheck
                      , quickcheck-instances
                      , mtl
                      , transformers
                      , transformers-base
                      , containers
                      , witherable
                      , these
                      , keys
                      , sets
                      , composition

Benchmark profile
  Type:                 exitcode-stdio-1.0
  Main-Is:              Profile.hs
  Hs-Source-Dirs:       bench
                      , src
  GHC-Options:          -O2 -threaded
  Build-Depends:        base
                      , criterion
                      , QuickCheck
                      , quickcheck-instances
                      , mtl
                      , transformers
                      , transformers-base
                      , containers
                      , witherable
                      , these
                      , keys
                      , sets
                      , composition

Source-Repository head
  Type:                 git
  Location:             https://github.com/athanclark/cassowary-haskell.git
