Name:                   cassowary-haskell
Version:                0.0.0
Author:                 Athan Clark <athan.clark@gmail.com>
Maintainer:             Athan Clark <athan.clark@gmail.com>
License:                MIT
License-File:           LICENSE
Synopsis:               A modern Cassowary implementation in pure Haskell.
-- Description:
Cabal-Version:          >= 1.10
Build-Type:             Simple

Library
  Default-Language:     Haskell2010
  HS-Source-Dirs:       src
  GHC-Options:          -Wall
  Exposed-Modules:      Linear.Grammar
                        Linear.Grammar.Class
                        Linear.Constraints.Cassowary
                        Linear.Constraints.Slack
                        Linear.Constraints.Cassowary.AugmentedSimplex
  Build-Depends:        base >= 4.6 && < 5
                      , mtl
                      , transformers
                      , QuickCheck
                      , containers

Test-Suite spec
  Type:                 exitcode-stdio-1.0
  Default-Language:     Haskell2010
  Hs-Source-Dirs:       src
                      , test
  Ghc-Options:          -Wall
  Main-Is:              Spec.hs
  Build-Depends:        base
                      , hspec
                      , QuickCheck
                      , quickcheck-instances
                      , containers

Source-Repository head
  Type:                 git
--  Location:
